assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Roboto&display=swap');

/*
Logo color #3aaa35
*/

/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

body {
  background-color: rgb(34, 36, 34);
  color: #fafafa;
}

/************************** GENERAL *******************************/

.uppercase {
  text-transform: uppercase;
}

.center {
  text-align: center;
}

hr {
  width: 20%;
  border-color: #218838;
  border-width: 2px;
}

.cta {
    font-family: 'krona One', sans-serif;
    text-shadow: 2px 2px black;
    text-align: center;
}

.cta2 {
    font-family: 'krona One', sans-serif;
    text-shadow: 2px 2px black;
    text-align: center;
    padding-bottom: 40px;
}

.btn-success {
  background-color: #3aaa35;
}

/************************** HEADER / NAVIGATION *******************************/

.navbar {
  padding: 5px;
  background-color:  rgba(34, 36, 34,0.8);
}

.navbar-nav li {
  padding-right: 45px;
}

.nav-link {
  font-size: 20px;
  font-family: 'krona One', sans-serif;
  font-style: italic;
  font-weight: 500;
  color: white !important;
  transition: all 0.35s ease-in-out;
  -moz-transition: all 0.35s ease-in-out;
  -webkit-transition: all 0.35s ease-in-out;
  -o-transition: all 0.35s ease-in-out;
}

.nav-item a:hover {
    color: #10ad25 !important;
}

.nav-item .active {
  color: #10ad25 !important;
}

/************************** HERO IMAGE *******************************/
.hero-image {
  background-image: url(../images/hero.jpg);
  height: 80vh;
  width: 100vw;
  background-size: cover;
  margin-top: 80px;
  position: relative;
  background-position: 0px 80px;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.hero-cta {
  position: absolute;
  top: 70%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
}

.hero-cta h1 {
  font-size: 2rem;
}

.hero-cta p {
  font-size: 1.2rem;
}



/************************** MEMBER COMMENTS *******************************/

.comments {
  margin: 10px 0 10px 0;
}

.member-comment {
  font-size: 20px;
  color: #000;
}

.carousel-inner .row {
  margin: 0 -80px;
}

.carousel-control-prev, .carousel-control-next {
  width: 5%;
}

/* Icon colour change code taken from Stackoverflow - https://stackoverflow.com/questions/46249541/change-arrow-colors-in-bootstraps-carousel */
.carousel-control-next-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
}

.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
}

/************************** ABOUT *******************************/

.about {
  padding: 30px 0;
}

.home-image-1 {
  object-fit: cover;
  height: 35vh;
  width: 100%;
}

.home-image-2 {
  object-fit: cover;
  height: 35vh;
  width: 100%;
}

.about p {
  font-size: 18px;
  font-family: 'krona One', sans-serif;
  font-weight: 100;
  line-height: 45px;
}

/************************** CARDS *******************************/

.cards {
  margin-top: 100px;
  margin-bottom: 20px;
}

.card {
  margin: 40px 40px 0px 40px;
  background-color: rgba(34, 36, 34, 0.4);
  border: 0;
}

.card-body {
  padding: 0 0 5px 0;
  margin-bottom: 20px;
  width: 100%;
}

.card h5 {
  font-family: 'krona One', sans-serif;
  font-size: 18px;
  text-align: center;
  color: #fafafa;
  padding-top: 10px;
}

.card-body a {
  font-family: 'krona One', sans-serif;
  text-align: center;
  color: #fafafa;
  padding: 5px;
  /* border: 1pt solid #899988; */
  letter-spacing: 1px;
  display: block;
}

.card-body p {
  font-family: 'Roboto', sans-serif;
}

.services h2 {
  text-align: center;
}

/* Code taken from w3schools - https://www.w3schools.com/howto/howto_css_image_overlay.asp*/
.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  -webkit-transition: .5s ease;
  -o-transition: .5s ease;
  transition: .5s ease;
  background-color: rgb(34, 36, 34);
}

.facilites h5, .class-info h5 {
  text-transform: uppercase;
}

.text {
  visibility: hidden;
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.card:hover .overlay {
  opacity: 0.5;
}

.card:hover .text {
  visibility: visible;
}

.class-info .card:hover, .facilities .card:hover {
  cursor: pointer;
}

/************************** MODALS *******************************/

.modal-content {
  background-color: rgba(34, 36, 34, 0.8);
  line-height: 35px;
  font-size: 20px;
  color: #fafafa;
}

.modal-header .close {
  color: #fff;
}

/************************** CLASSES TABLE *******************************/

.class-timetable h2 {
  text-align: center;
  font-family: 'krona One', sans-serif;
  font-size: 22px;
  font-weight: 200;
  padding-bottom: 10px;
}

.timetable {
  overflow: auto;
  border: 1px solid #fff;
  white-space: nowrap;
  height: 400px;
  text-align: center;
}

.table {
  color: #fafafa;
  margin-bottom: 0;
  border-collapse: separate;
  border-spacing: 0;
  border: none;
}

.timetable .table td {
  border: 1px solid #fafafa;
  font-family: 'krona One', sans-serif;
  font-size: 10px;
}

.timetable th {
  top: 0px;
  background-color: green;
  border: 1px solid #fafafa;
  min-width: 125px;
}

.sticky-cell {
  position: sticky;
  position: -webkit-sticky;
}

.timetable .first-col  {
  left: -10px;
  background-color: green;
  z-index: 4;
  min-width: 125px;
}

th.second-col {
  padding-left: 30px;
  padding-right: 30px;
  }

/************************** SERVICES PAGE *******************************/

.services h2 {
  padding: 10px;
}

/************************** FORMS *******************************/

.message textarea {
  display: block;
  width: 100%;
}

form .gender {
  padding-left: 10px;
}

/************************** FOOTER *******************************/

footer {
  background-color:  rgb(34, 36, 34);
  color: #fafafa;
  font-family: 'krona One', sans-serif;
}

.location, .social, .opening-hours  {
  border: 1pt solid #fafafa;
  border-radius: 5%;
}

.address {
  color: #fafafa;
  font-family: 'krona One', sans-serif;
  margin: 20px 0;
  padding: 10px 0 0 10px;
}

.social li a i {
  width: 40px;
  height: 40px;
  padding: 17px 0;
  border-radius: 50%;
  font-size: 20px;
  line-height: 4px;
  text-align: center;
  color: #fafafa;
  background: black;
  transition: all 0.25s ease-in-out;
  -moz-transition: all 0.25s ease-in-out;
  -webkit-transition: all 0.25s ease-in-out;
  -o-transition: all 0.25s ease-in-out;
}

.list-inline-item {
  margin: 0 20px;
}

.social li a i:hover {
  color: #10ad25;
}

#opening-hours-table {
  margin: 20px 0;
  font-size: 15px;
}

#opening-hours-table td{
  padding: 10px 15px;
  border: 1px solid #fafafa;
}

/************************** MEDIA QUERIES *******************************/

@media screen and (min-width: 600px) {
  .hero-cta h1 {
    font-size: 4rem;
  }
}

@media screen and (max-width: 1500px) {
  th.second-col , td.second-col {
    padding-left: 110px;
  }
}

/* Laptop with MDPI */
@media screen and (max-width: 1280px) {
  th.second-col , td.second-col {
    padding-left: 15vw;
  }
}

/* IPAD PRO 12.5*/
@media screen and (max-width: 1024px) {
  th.second-col, td.second-col  {
    padding-left: 35vw;
  }
  .home-image-1 {
   -o-object-fit: cover;
      object-fit: cover;
   height: 310px;
   width: 100%;
 }
 .home-image-2 {
   -o-object-fit: cover;
      object-fit: cover;
   height: 310px;
   width: 100%;
 }
  .carousel-inner .row {
    height: 200px;
  }
  .card:hover .overlay {
    opacity: 0;
  }

  .card:hover .text {
    visibility: hidden;
  }
}

/* IPAD PRO 10.5*/
@media screen and (max-width: 834px) {
  th.second-col , td.second-col {
    padding-left: 42vw;
  }
  .home-image-1 {
    -o-object-fit: cover;
       object-fit: cover;
    height: 340px;
    width: 100%;
  }
    .home-image-2 {
      -o-object-fit: cover;
         object-fit: cover;
      -o-object-position: -160px;
         object-position: -160px;
      height: 340px;
      width: 100%;
    }
}

/* KINDLE FIRE */
@media screen and (max-width: 800px) {
  .hero-image {
    background-position: -120px 80px;
  }
  th.second-col , td.second-col {
    padding-left: 47vw;
  }
  .card {
    margin: 10px 5px 5px 10px;
  }
  .home-image-1 {
   -o-object-fit: cover;
      object-fit: cover;
   height: 310px;
   width: 100%;
 }
 .home-image-2 {
   -o-object-fit: cover;
      object-fit: cover;
   height: 310px;
   width: 100%;
   -o-object-position: -150px;
      object-position: -150px;
 }
  .about p {
    font-size: 16px;
    line-height: 35px;
  }
  .carousel-inner .row {
    height: 220px;
  }
}

/* IPAD & IPAD Mini */
@media screen and (max-width: 768px) {
  th.second-col , td.second-col {
    padding-left: 53vw;
  }
  .carousel-inner .row {
    height: 250px;
  }
}

/* Nexus 7 */
@media screen and (max-width: 600px) {
  th.second-col , td.second-col {
    padding-left: 75vw;
  }
  .carousel-inner .row {
    height: 450px;
  }
  .home-image-1 {
   -o-object-fit: cover;
      object-fit: cover;
   height: 310px;
   width: 100%;
 }
 .home-image-2 {
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
   width: 100%;
   -o-object-position: 0;
      object-position: 0;
 }
}

/* Iphone 6/7/8 Plus */
@media screen and (max-width: 415px) {
  .hero-image {
  background-position: -100px 80px;
  background-size:auto;
  }
  th.second-col , td.second-col {
    padding-left: 150vw;
  }
  .card {
    margin: 10px 0;
  }
  .home-image-1 {
    -o-object-fit: cover;
       object-fit: cover;
    height: 300px;
    width: 100%;
  }
    .home-image-2 {
      -o-object-fit: cover;
         object-fit: cover;
      -o-object-position: -160px;
         object-position: -160px;
      height: 300px;
      width: 100%;
    }
  .carousel-inner .row {
    height: 510px;
  }
}

/* Nexus 5X, Nexus 6P, Pixel 2, Pixel 2 XL */
@media screen and (max-width: 412px) {
  th.second-col , td.second-col {
    padding-left: 153vw;
  }
}

/* LG Optimus L70 */
@media screen and (max-width: 384px) {
  th.second-col , td.second-col {
    padding-left: 170vw;
  }
}

/* Iphone 6/7/8 */
@media screen and (max-width: 375px) {
  th.second-col , td.second-col {
    padding-left: 178vw;
  }
}

/* Galaxy S5 */
@media screen and (max-width: 360px) {
  th.second-col , td.second-col {
    padding-left: 190vw;
  }
}

/* Iphone 5 */
@media screen and (max-width: 320px) {
  th.second-col , td.second-col {
    padding-left: 225vw;
  }
}

/* Nokia 8110 4G Firefox*/
@media screen and (max-width: 240px) {
  th.second-col , td.second-col {
    padding-left: 330vw;
  }
}

